--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       * {
         margin: 0;
-        font-family: Arial;
+        font-family: Verdana;
       }
     </style>
   </head>
